force-app/main/default/objects/Book__c/fields/available__c.field-meta.xml
<CustomField>
    <fullName>available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Book is available or not</description>
    <label>available</label>
    <type>Checkbox</type>
</CustomField>