force-app/main/default/objects/Book__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>High-level description
of the job and its duties.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>