force-app/main/default/objects/Book__c/fields/mumbai__c.field-meta.xml
<CustomField>
    <fullName>mumbai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mumbai</label>
    <type>Checkbox</type>
</CustomField>