force-app/main/default/objects/Book__c/fields/Position1_del__c.field-meta.xml
<CustomField>
    <fullName>Position1_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position1</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Books (Position1)</relationshipLabel>
    <relationshipName>Books1_del</relationshipName>
    <type>Lookup</type>
</CustomField>