force-app/main/default/objects/Book__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>