force-app/main/default/objects/Book__c/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <label>x</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</fullName>
            </value>
            <value>
                <fullName>bbbbbbbbbbbbbbbbbbbbbb</fullName>
            </value>
            <value>
                <fullName>cccccccccccccccccccccccccccccccc</fullName>
            </value>
            <value>
                <fullName>ddddddddddddddd</fullName>
            </value>
            <value>
                <fullName>eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</fullName>
            </value>
            <value>
                <fullName>gggggggggggggggggggggggggggggggggggggggg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>