force-app/main/default/objects/Book__c/validationRules/Negative_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c  &lt;= 0</errorConditionFormula>
    <errorMessage>Book Price Can&apos;t be zero or negative</errorMessage>
</ValidationRule>