force-app/main/default/objects/Book__c/validationRules/Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Price</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Price__c )</errorConditionFormula>
    <errorMessage>Price Can&apos;t be blank</errorMessage>
</ValidationRule>