force-app/main/default/objects/Book__c/validationRules/price_checking.validationRule-meta.xml
<ValidationRule>
    <fullName>price_checking</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c&gt;1000</errorConditionFormula>
    <errorMessage>book price is more than 1000</errorMessage>
</ValidationRule>